@@ -7,6 +7,7 @@ CHANGELOG
 ### Changelog extractor
 * Better detect previous version.
 * Archives: Support tar.bz2 and exclude .asc files automatically.
+* Refactor and fix debian conversion and add tests for it.
 
 2021-07-17
 ----------
